# deepstream_python_apps

./: .gitmodules
apps/deepstream-custom-binding-test/: deepstream_custom_binding_test.py  graph.dot
apps/deepstream-demux-multi-in-multi-out/: PIPELINE_DATAFLOW.md  deepstream_demux_multi_in_multi_out.py  ds_demux_pgie_config.txt
apps/deepstream-nvdsanalytics/: config_nvdsanalytics.txt  deepstream_nvdsanalytics.py  dsnvanalytics_pgie_config.txt  dsnvanalytics_tracker_config.txt  graph.dot
apps/deepstream-preprocess-test/: README  config_preprocess.txt  deepstream_preprocess_test.py  dstest1_pgie_config.txt
apps/deepstream-rtsp-in-rtsp-out/: deepstream_test1_rtsp_in_rtsp_out.py  dstest1_pgie_inferserver_config.txt  graph.dot
apps/deepstream-test1/: PIPELINE_DATAFLOW.md  deepstream_test_1.py  dstest1_pgie_config.txt
apps/deepstream-test1-rtsp-out/: PIPELINE_DATAFLOW.md  deepstream_test1_rtsp_out.py  dstest1_pgie_config.txt  play_udp_h264.sdp  play_udp_h265.sdp
apps/deepstream-test1-usbcam/: PIPELINE_DATAFLOW.md  deepstream_test_1_usb.py
apps/deepstream-test2/: PIPELINE_DATAFLOW.md  deepstream_test_2.py  dstest2_pgie_config.txt  (+2 more)
bindings/: CMakeLists.txt
bindings/custom_msg2p_ctface_bind/: CMakeLists.txt
bindings/custom_msg2p_ctface_bind/src/: nvds_msg2p_ctface_bind.cpp
docs_nv/: autovideosink.txt  capsfilter.txt  fakesink.txt  filesrc.txt  h264parse.txt  h265parse.txt  nvdslogger.txt  nvdsosd.txt  nvdspreprocess.txt  nveglglessink.txt  nvinfer.txt  nvmsgbroker.txt  nvmsgconv.txt  nvmultistreamtiler.txt  nvstreamdemux.txt  nvstreammux.txt  nvtracker.txt  nvurisrcbin.txt  nvv4l2decoder.txt  nvv4l2h264enc.txt  nvv4l2h265enc.txt  nvvideoconvert.txt  qtdemux.txt  queue.txt  rtph264pay.txt  rtph265pay.txt  tee.txt  udpsink.txt  uridecodebin.txt  v4l2src.txt  valve.txt  videoconvert.txt  x264enc.txt  x265enc.txt
(+27 files in other folders)
